bootstrapping the application